# src/main/java/com/deemor/motif/alert/dto/AlertStatistics.java
@@ -1,0 +1,12 @@
+package com.deemor.motif.alert.dto;
+
+import lombok.Builder;
+import lombok.Getter;
+import lombok.Setter;
+
+@Getter
+@Setter
+@Builder
+public class AlertStatistics {
+    private Integer unreadAlerts;
+}
