# src/main/java/com/deemor/motif/alert/entity/AlertStyle.java
@@ -1,0 +1,7 @@
+package com.deemor.motif.alert.entity;
+
+public enum AlertStyle {
+    BASIC,
+    WARNING,
+    INFORMATION
+}
