# src/main/java/com/deemor/motif/alert/entity/AlertType.java
@@ -1,0 +1,6 @@
+package com.deemor.motif.alert.entity;
+
+public enum AlertType {
+    BASIC,
+    HELP_REQUEST
+}
